--- a/services.html
+++ b/services.html
@@ -136,8 +136,8 @@
 
                     <div class="row row-pubblication">
                         <ul>
+                            <li>Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus Academy of Data Science, 's-Hertogenbosch, The Netherlands, December 5th 2017</li>
                             <li>Diagnose and Detect Energy Flaws of Android Apps. Vrije Universiteit Brussel, Brussels, Belgium, March 23rd 2017</li>
-                            <!--<li>Machine Learning and Deep Learning in Practice. Jheronimus Academy of Data Science, 's-Hertogenbosch, The Netherlands, December 5th 2017</li>-->
                         </ul>
                     </div>
                             
