Add Andy to description

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                                 Currently he is a PhD candidate at the <a target="blank" href="http://www.sesa.unisa.it/">Software Engineering in Salerno Lab</a> in the University of Salerno, advised by <a href="http://docenti.unisa.it/003241/home" target="blank">Prof. Andrea De Lucia</a>.
                                 His research interests include bug prediction, search based software testing, energy optimization of mobile apps, mining software repositories, and empirical software engineering.
-                                During this experience he has been visiting student at the Software and Computer Technology department of the Delft University of Technology collaborating with the <a href="http://swerl.tudelft.nl/bin/view/Main/WebHome" target="blank">Software Engineering Research Group</a>.<br class="br-index"/>
+                                During this experience he has been visiting student at the Software and Computer Technology department of the Delft University of Technology collaborating with the <a href="http://swerl.tudelft.nl/bin/view/Main/WebHome" target="blank">Software Engineering Research Group</a> and supervised by Prof. <a href="http://wwwtmp.st.ewi.tudelft.nl/zaidman/" target="blank">Andy Zaidman</a>.<br class="br-index"/>
                                 You can find his full Curriculum Vitae <a target="blank" href="Short Resume.pdf">here</a>.
                             </p>
                         </div>
