--- a/services.html
+++ b/services.html
@@ -93,6 +93,9 @@
                                 Empirical Software Engineering - Springer
                             </li>
                             <li>
+                                IEEE Access - IEEE
+                            </li>
+                            <li>
                                 Information Processing Letters - Elsevier
                             </li>
                             <li>
