--- a/teaching.html
+++ b/teaching.html
@@ -77,14 +77,14 @@
                                 </tr>
                                 <tr>
                                     <td>Simone Scalabrino</td>
-                                    <td>Design and implementation of a tool for the automatic generation of test cases</td>
+                                    <td>Design and development of a tool for the automatic generation of test cases</td>
                                     <td>MSc</td>
                                     <td>2015/07</td>
                                     <td>Prof. Andrea De Lucia</td>
                                 </tr>
                                 <tr>
                                     <td>Giovanni Grano</td>
-                                    <td>Implementation and comparison of novel techniques for search based test data generation</td>
+                                    <td>Development and comparison of novel techniques for search based test data generation</td>
                                     <td>MSc</td>
                                     <td>2015/09</td>
                                     <td>Prof. Andrea De Lucia</td>
@@ -98,7 +98,7 @@
                                 </tr>
                                 <tr>
                                     <td>Fabiano Pecorelli</td>
-                                    <td>Design and implementation of a defect prediction tool</td>
+                                    <td>Design and development of a defect prediction tool</td>
                                     <td>BSc</td>
                                     <td>2016/09</td>
                                     <td>Prof. Andrea De Lucia</td>
@@ -119,30 +119,44 @@
                                 </tr>
                                 <tr>
                                     <td>Pasquale Martiniello</td>
-                                    <td>Design and implementation of a defect prediction tool by using cross-project techniques</td>
+                                    <td>Design and development of a defect prediction tool by using cross-project techniques</td>
                                     <td>BSc</td>
                                     <td>2017/03</td>
                                     <td>Prof. Andrea De Lucia</td>
                                 </tr>
                                 <tr>
                                     <td>Roberto Contaldo</td>
-                                    <td>Design and implementation of a plugin for the detection of energy defects of mobile applications</td>
+                                    <td>Development of a software energy estimation methodology in an integrated development environment</td>
                                     <td>BSc</td>
                                     <td>2017/10</td>
                                     <td>Prof. Andrea De Lucia</td>
                                 </tr>
                                 <tr>
                                     <td>Giuseppina Tufano</td>
-                                    <td>Design and implementation of a defect prediction tool</td>
+                                    <td>Design and development of a defect prediction tool</td>
                                     <td>BSc</td>
                                     <td>2017/10</td>
                                     <td>Prof. Andrea De Lucia</td>
                                 </tr>
                                 <tr>
                                     <td>Sara Zaino</td>
-                                    <td>Implementation of a software energy estimation methodology in an integrated development environment</td>
+                                    <td>Design and development of a plugin for the detection of energy defects of mobile applications</td>
                                     <td>BSc</td>
                                     <td>2017/10</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                </tr>
+                                <tr>
+                                    <td>Gerardo Della Monica</td>
+                                    <td>Design and development of a plugin for optimizing regression testing</td>
+                                    <td>BSc</td>
+                                    <td>2017/12</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                </tr>
+                                <tr>
+                                    <td>Giuseppe Sessa</td>
+                                    <td>Design and development of methods for test case prioritization</td>
+                                    <td>BSc</td>
+                                    <td>2017/12</td>
                                     <td>Prof. Andrea De Lucia</td>
                                 </tr>
                             </tbody>
