New descrition, cv, and photo

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="row row-index">
                         <div class="2u">
                             <span class="image fit">
-                              <img src="images/me3.png" alt=""/>
+                              <img src="images/me4.png" alt=""/>
                             </span>
                             <a href="https://orcid.org/0000-0002-3861-1902" target="orcid.widget" rel="noopener noreferrer">
                                 <img src="images/my_orcid_qrcode.png" alt=""/>
@@ -64,25 +64,32 @@
                             </a>
                         </div>
                         <div class="10u">
-                            <p style="text-align:justify; padding:10px">
-                                <strong>Dario Di Nucci</strong> was born in Isernia (Italy) on September 3th, 1988.
-                                He received (cum laude) the Master's Degree in Computer Science from the University of Salerno (Italy) in 2014 defending a thesis on Defect Prediction, advised by <a href="http://docenti.unisa.it/003241/home" target="blank">Prof. Andrea De Lucia</a>.<br class="br-index"/>
-                                In 2011 he got his Bachelor's Degree (cum laude) from the University of Molise, with a thesis on Information Retrieval, advised by <a href="http://docenti.unimol.it/index.php?u=giovanni.capobianco" target="blank">Prof. Giovanni Capobianco</a>.<br class="br-index"/>
-                                He is an open-source enthusiast who likes to work on challenging project. In 2014 he completed the 10th edition of Google Summer of Code working on <a href="https://wiki.gnome.org/Apps/Maps" target="blank">Gnome Maps</a> and <a href="https://graphhopper.com/" target="blank">GraphHopper</a>.<br class="br-index"/>
+                            <h1 style="text-align:justify; padding:5px">Dario Di Nucci</h1>
+                            <p style="text-align:justify; padding-right:10px">
+                                I obtained my M.Sc. in Computer Science from the University of Salerno, Italy, in 2014.<br class="br-index"/>
 
-                                Currently he is a PhD candidate at the <a target="blank" href="http://www.sesa.unisa.it/">Software Engineering in Salerno Lab</a> in the University of Salerno, advised by <a href="http://docenti.unisa.it/003241/home" target="blank">Prof. Andrea De Lucia</a>.
-                                His research interests include bug prediction, search based software testing, energy optimization of mobile apps, mining software repositories, and empirical software engineering.
-                                During this experience he has been visiting student at the Software and Computer Technology department of the Delft University of Technology collaborating with the <a href="http://swerl.tudelft.nl/bin/view/Main/WebHome" target="blank">Software Engineering Research Group</a> and supervised by Prof. <a href="http://wwwtmp.st.ewi.tudelft.nl/zaidman/" target="blank">Andy Zaidman</a>.<br class="br-index"/>
-                                You can find his full Curriculum Vitae <a target="blank" href="Short Resume.pdf">here</a>.
+                                Currently I am research fellow in the Software Languages Lab at the Vrije Universiteit Brussel within the "INTelligent Modernisation Assistance for Legacy Software" (INTiMALS) project with Prof. Coen De Roover.<br class="br-index"/>
+
+                                Moreover, I am working toward the Ph.D. degree at the University of Salerno, Italy, under the supervision of Prof. Andrea De Lucia.<br class="br-index"/>
+
+                                My research interests include software maintenance and evolution, software testing, search based software engineering, green mining, mining software repositories, and empirical software engineering.<br class="br-index"/>
+                                
+                                You can find my full Curriculum Vitae <a target="blank" href="Short Resume.pdf">here</a>.
                             </p>
                         </div>
+                        
                         <div class="12u">
-                            <p>Software Engineering Lab - Università degli Studi di Salerno<br/>
-                                Via Giovanni Paolo II, 132<br/>
-                                84084 Fisciano (SA) - Italy<br/>
-                                Tel +39 089 963381 - Fax + 39 089 963303 </p>
+                            <a href="http://www.vub.ac.be/" target="blank"><img src="images/het-vub-logo.png" alt="" style="width:215px; height:80px"/></a>
+                            <p>
+                                Software Languages Lab<br/>
+                                Vrije Universiteit Brussel<br/>
+                                Pleinlaan 2<br/>
+                                B-1050 Brussels - Belgium<br/>
+                                Office <br/>
+                                Tel.
+                            </p>
                             <ul class="social">
-                                <li><a href="mailto:ddinucci@unisa.it" class="icon fa-envelope" target="blank"></a></li>
+                                <li><a href="mailto:ddinucci@vub.ac.be" class="icon fa-envelope" target="blank"></a></li>
                                 <li><a href="skype:dario.dinucci" class="icon fa-skype" target="blank"></a></li>
                                 <li><a href="http://it.linkedin.com/pub/dario-di-nucci/44/926/654/en" class="icon fa-linkedin" target="blank"></a></li>
                                 <li><a href="https://www.researchgate.net/profile/Dario_Di_Nucci" class="ai ai-researchgate" target="blank"></a></li>
