Change office number.

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
                                 Vrije Universiteit Brussel<br/>
                                 Pleinlaan 2<br/>
                                 B-1050 Brussels - Belgium<br/>
-                                Office <br/>
-                                Tel.
+                                Office 10F725
                             </p>
                             <ul class="social">
                                 <li><a href="mailto:ddinucci@vub.ac.be" class="icon fa-envelope" target="blank"></a></li>
