Published scattering TSE data.

--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,7 @@
                         <p>
                             <b>[J1]</b> D. Di Nucci, F. Palomba, G. De Rosa, G. Bavota, R. Oliveto, A. De Lucia.<br/>
                             A Developer Centered Bug Prediction Model.<br/>
-                            IEEE Transactions on Software Engineering (TSE), 2017, 21 pages, to appear.
+                            IEEE Transactions on Software Engineering (TSE), 2017, Volume 44 Issue 1, 21 pages, 5-24.
                             <a href="https://www.researchgate.net/publication/312962994_A_Developer_Centered_Bug_Prediction_Model?_iepl%5BviewId%5D=KLsI0DPmKOA4HfPtAj11ANey&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A312962994&_iepl%5BinteractionType%5D=publicationTitle" target="blank">[pdf]</a>
                         </p>
                     </div>
