Add telephone number.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                                 Pleinlaan 2<br/>
                                 B-1050 Brussels - Belgium<br/>
                                 Office 10F725
+                                Telephone +32 02 629 29 65
                             </p>
                             <ul class="social">
                                 <li><a href="mailto:ddinucci@vub.ac.be" class="icon fa-envelope" target="blank"></a></li>
