--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 Vrije Universiteit Brussel<br/>
                                 Pleinlaan 2<br/>
                                 B-1050 Brussels - Belgium<br/>
-                                Office 10F725
+                                Office 10F725<br/>
                                 Telephone +32 02 629 29 65
                             </p>
                             <ul class="social">
