W3C Validation. Brackets beautify. Minor fix to footer.

--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,4 @@
 <ul id="copyright">
     <li>&copy; Dario Di Nucci. All rights reserved.</li>
-    <li><a href="http://www.unisa.it/" id="advisor-link" target="_blank" class="icon fa-university">Università degli
-            Studi di Salerno</a></li>
+    <li><a href="http://www.vub.ac.be/" id="advisor-link" target="_blank" class="icon fa-university">Vrije Universiteit Brussel</a></li>
 </ul>
