--- a/index.html
+++ b/index.html
@@ -5,103 +5,94 @@
         Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-    <head>
-        <title>Dario Di Nucci</title>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-        <meta name="description" content=""/>
-        <meta name="keywords" content=""/>
-        <!--[if lte IE 8]>
-        <script src="css/ie/html5shiv.js"></script><![endif]-->
-        <script src="js/jquery.min.js"></script>
-        <script src="js/jquery.scrolly.min.js"></script>
-        <script src="js/skel.min.js"></script>
-        <script src="js/init.js"></script>
-        <script src="js/script.js"></script>
-        <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                        m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-            ga('create', 'UA-57094101-2', 'auto');
-            ga('send', 'pageview');
-        </script>
-        <noscript>
+<head>
+    <title>Dario Di Nucci</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <!--[if lte IE 8]>
+        <script src="css/ie/html5shiv.js"></script><![endif]-->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.scrolly.min.js"></script>
+    <script src="js/skel.min.js"></script>
+    <script src="js/init.js"></script>
+    <script src="js/script.js"></script>
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-57094101-2', 'auto');
+        ga('send', 'pageview');
+
+    </script>
+    <noscript>
         <link rel="stylesheet" href="css/skel.css"/>
         <link rel="stylesheet" href="css/style.css"/>
         <link rel="stylesheet" href="css/style-desktop.css"/>
         </noscript>
-        <!--[if lte IE 8]>
+    <!--[if lte IE 8]>
         <link rel="stylesheet" href="css/ie/v8.css"/><![endif]-->
-        <!--[if lte IE 9]>
+    <!--[if lte IE 9]>
         <link rel="stylesheet" href="css/ie/v9.css"/><![endif]-->
-        <link rel="stylesheet" href="css/academicons.css"/>
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
-    </head>
-    <body>
+    <link rel="stylesheet" href="css/academicons.css" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+</head>
 
-        <div id="menu"></div>
+<body>
 
-        <!-- About -->
-        <div class="wrapper wrapperStyle">
-            <article id="about">
-                <div class="container" style="margin-top: 2%">
-                    <div class="row row-index">
-                        <div class="2u">
-                            <span class="image fit">
+    <div id="menu"></div>
+
+    <!-- About -->
+    <div class="wrapper wrapperStyle">
+        <article id="about">
+            <div class="container" style="margin-top: 2%">
+                <div class="row row-index">
+                    <div class="2u">
+                        <span class="image fit">
                               <img src="images/me4.png" alt=""/>
                             </span>
-                            <a href="https://orcid.org/0000-0002-3861-1902" target="orcid.widget" rel="noopener noreferrer">
+                        <a href="https://orcid.org/0000-0002-3861-1902" target="orcid.widget" rel="noopener noreferrer">
                                 <img src="images/my_orcid_qrcode.png" alt=""/>
                                 <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID iD icon">orcid.org/0000-0002-3861-1902
                             </a>
-                        </div>
-                        <div class="10u">
-                            <h1 style="text-align:justify; padding:5px">Dario Di Nucci</h1>
-                            <p style="text-align:justify; padding-right:10px">
-                                I obtained my M.Sc. in Computer Science from the University of Salerno, Italy, in 2014.<br class="br-index"/>
+                    </div>
+                    <div class="10u">
+                        <h1 style="text-align:justify; padding:5px">Dario Di Nucci</h1>
+                        <p style="text-align:justify; padding-right:10px">
+                            I obtained my M.Sc. in Computer Science from the University of Salerno, Italy, in 2014.<br class="br-index" /> Currently I am research fellow in the Software Languages Lab at the Vrije Universiteit Brussel within the "INTelligent Modernisation Assistance for Legacy Software" (INTiMALS) project with Prof. Coen De Roover.<br class="br-index" /> Moreover, I am working toward the Ph.D. degree at the University of Salerno, Italy, under the supervision of Prof. Andrea De Lucia.<br class="br-index" /> My research interests include software maintenance and evolution, software testing, search based software engineering, green mining, mining software repositories, and empirical software engineering.<br class="br-index" /> You can find my full Curriculum Vitae <a target="blank" href="Short Resume.pdf">here</a>.
+                        </p>
+                    </div>
 
-                                Currently I am research fellow in the Software Languages Lab at the Vrije Universiteit Brussel within the "INTelligent Modernisation Assistance for Legacy Software" (INTiMALS) project with Prof. Coen De Roover.<br class="br-index"/>
-
-                                Moreover, I am working toward the Ph.D. degree at the University of Salerno, Italy, under the supervision of Prof. Andrea De Lucia.<br class="br-index"/>
-
-                                My research interests include software maintenance and evolution, software testing, search based software engineering, green mining, mining software repositories, and empirical software engineering.<br class="br-index"/>
-                                
-                                You can find my full Curriculum Vitae <a target="blank" href="Short Resume.pdf">here</a>.
-                            </p>
-                        </div>
-                        
-                        <div class="12u">
-                            <a href="http://www.vub.ac.be/" target="blank"><img src="images/het-vub-logo.png" alt="" style="width:215px; height:80px"/></a>
-                            <p>
-                                Software Languages Lab<br/>
-                                Vrije Universiteit Brussel<br/>
-                                Pleinlaan 2<br/>
-                                B-1050 Brussels - Belgium<br/>
-                                Office 10F725<br/>
-                                Telephone +32 02 629 29 65
-                            </p>
-                            <ul class="social">
-                                <li><a href="mailto:ddinucci@vub.ac.be" class="icon fa-envelope" target="blank"></a></li>
-                                <li><a href="skype:dario.dinucci" class="icon fa-skype" target="blank"></a></li>
-                                <li><a href="http://it.linkedin.com/pub/dario-di-nucci/44/926/654/en" class="icon fa-linkedin" target="blank"></a></li>
-                                <li><a href="https://www.researchgate.net/profile/Dario_Di_Nucci" class="ai ai-researchgate" target="blank"></a></li>
-                                <li><a href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ&hl=it" class="ai ai-google-scholar" target="blank"></a></li>
-                                <li><a href="https://twitter.com/dardin88" class="icon fa-twitter" target="blank"></a></li>
-                                <li><a href="https://github.com/dardin88" class="icon fa-github" target="blank"></a></li>
-                            </ul>
-                        </div>
+                    <div class="12u">
+                        <a href="http://www.vub.ac.be/" target="blank"><img src="images/het-vub-logo.png" alt="" style="width:215px; height:80px"/></a>
+                        <p>
+                            Software Languages Lab<br/> Vrije Universiteit Brussel<br/> Pleinlaan 2<br/> B-1050 Brussels - Belgium<br/> Office 10F725<br/> Telephone +32 02 629 29 65
+                        </p>
+                        <ul class="social">
+                            <li><a href="mailto:ddinucci@vub.ac.be" class="icon fa-envelope" target="blank"></a></li>
+                            <li><a href="skype:dario.dinucci" class="icon fa-skype" target="blank"></a></li>
+                            <li><a href="http://it.linkedin.com/pub/dario-di-nucci/44/926/654/en" class="icon fa-linkedin" target="blank"></a></li>
+                            <li><a href="https://www.researchgate.net/profile/Dario_Di_Nucci" class="ai ai-researchgate" target="blank"></a></li>
+                            <li><a href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ&hl=it" class="ai ai-google-scholar" target="blank"></a></li>
+                            <li><a href="https://twitter.com/dardin88" class="icon fa-twitter" target="blank"></a></li>
+                            <li><a href="https://github.com/dardin88" class="icon fa-github" target="blank"></a></li>
+                        </ul>
                     </div>
                 </div>
-            </article>
-        </div>
+            </div>
+        </article>
+    </div>
 
-    </body>
+</body>
+
 </html>
