--- a/research.html
+++ b/research.html
@@ -5,106 +5,104 @@
         Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-    <head>
-        <title>Dario Di Nucci</title>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-        <meta name="description" content=""/>
-        <meta name="keywords" content=""/>
-        <!--[if lte IE 8]>
-        <script src="css/ie/html5shiv.js"></script><![endif]-->
-        <script src="js/jquery.min.js"></script>
-        <script src="js/jquery.scrolly.min.js"></script>
-        <script src="js/skel.min.js"></script>
-        <script src="js/init.js"></script>
-        <script src="js/script.js"></script>
-        <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                        m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-            ga('create', 'UA-57094101-2', 'auto');
-            ga('send', 'pageview');
-        </script>
-        <noscript>
+<head>
+    <title>Dario Di Nucci</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <!--[if lte IE 8]>
+        <script src="css/ie/html5shiv.js"></script><![endif]-->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.scrolly.min.js"></script>
+    <script src="js/skel.min.js"></script>
+    <script src="js/init.js"></script>
+    <script src="js/script.js"></script>
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-57094101-2', 'auto');
+        ga('send', 'pageview');
+
+    </script>
+    <noscript>
         <link rel="stylesheet" href="css/skel.css"/>
         <link rel="stylesheet" href="css/style.css"/>
         <link rel="stylesheet" href="css/style-desktop.css"/>
         </noscript>
-        <!--[if lte IE 8]>
+    <!--[if lte IE 8]>
         <link rel="stylesheet" href="css/ie/v8.css"/><![endif]-->
-        <!--[if lte IE 9]>
+    <!--[if lte IE 9]>
         <link rel="stylesheet" href="css/ie/v9.css"/><![endif]-->
-        <link rel="stylesheet" href="css/academicons.css"/>
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
-    </head>
-    <body>
+    <link rel="stylesheet" href="css/academicons.css" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+</head>
 
-        <div id="menu"></div>
+<body>
 
-        <div class="wrapper wrapperStyle">
-            <article id="research">
-                <div class="container" style="margin-top: 2%">
-                    <div class="row">
-                      <div class="4u">
-                            <section class="box">
-                                <h3>Bug Prediction</h3>
-                                <p style="text-align: justify">
-                                    Allocating resources for the testing and the verification of all the parts of a large software system is a cost-prohibitive task. To alleviate this issue, prediction models able to identify portions of source code more prone to contain bugs have been the object of several studies.<br/>
-                                    The main research topic is the definition of accurate prediction models that, on the one hand use a suitable set of predictors able to characterize the bug-proneness of code components, and on the other hand are able to use appropriate machine learning techniques to distinguish those components affected by bug.
-                                </p>
-                            </section>
-                        </div>
-                        <div class="4u">
-                            <section class="box">
-                                <h3>Search Based Software Testing</h3>
-                                <p style="text-align: justify">
-                                    Software testing is an essential yet expensive activity in software development, therefore much research effort has been put to automate it as much as possible. Search-based software testing consists of using meta-heuristic optimizing search technique, such as genetic algorithms, to address problems in the software testing and verification and validation domain, such as regression testing optimization and automatic test data generation.<br/>
-                                    The main goal of an optimization process is to guide the search toward good solutions from a potentially infinite search space, within a practical time limit.
-                                </p>
-                            </section>
-                        </div>
-                        <div class="4u">
-                            <section class="box">
-                                <h3>Energy Optimization of Mobile Apps</h3>
-                                <p style="text-align: justify">
-                                    Energy efficiency is a vital characteristic of any mobile app, and indeed is becoming an important factor for user satisfaction. However, optimizing the energy consumption of a mobile app is non-trivial due to the highly volatile nature of mobile execution environments and the lack of knowledge of software developers.<br/>
-                                    The goal of this topic is on the one hand to build new tools able to measure the energy profile of mobile apps, and on the other hand to propose new methods and tools able to assist software developers.
-                                </p>
-                            </section>
-                        </div>
+    <div id="menu"></div>
+
+    <div class="wrapper wrapperStyle">
+        <article id="research">
+            <div class="container" style="margin-top: 2%">
+                <div class="row">
+                    <div class="4u">
+                        <section class="box">
+                            <h3>Bug Prediction</h3>
+                            <p style="text-align: justify">
+                                Allocating resources for the testing and the verification of all the parts of a large software system is a cost-prohibitive task. To alleviate this issue, prediction models able to identify portions of source code more prone to contain bugs have been the object of several studies.<br/> The main research topic is the definition of accurate prediction models that, on the one hand use a suitable set of predictors able to characterize the bug-proneness of code components, and on the other hand are able to use appropriate machine learning techniques to distinguish those components affected by bug.
+                            </p>
+                        </section>
                     </div>
-                    <div class="row">            
-                        <div class="4u">
-                            <section class="box">
-                                <h3>Mining Software Repositories</h3>
-                                <p style="text-align: justify">
-                                    Software repositories such as source code control systems, communications stored between project staff and monitoring systems of the defects are used to improve the management of the progress of software projects.<br/>
-                                    The purpose of this branch of research is to find out how to obtain information in order to help understand the development and evolution software processes, support forecasts on software development, and plan future developments.
-                                </p>
-                            </section>
-                        </div>
-                        <div class="4u">
-                            <section class="box">
-                                <h3>Empirical Software Engineering</h3>
-                                <p style="text-align: justify">
-                                    Empirical software engineering is a subdomain of software related to experiments on systems software (software products, processes and resources).<br/>
-                                    This branch includes the design of experiments on software, the collection of the results, and the consequent development of laws and theories.<br/>
-                                    Proponents of empirical software engineering argue that, given the nature of the software, it is possible to broaden the knowledge about it through new experiments.
-                                </p>
-                            </section>
-                        </div>
+                    <div class="4u">
+                        <section class="box">
+                            <h3>Search Based Software Testing</h3>
+                            <p style="text-align: justify">
+                                Software testing is an essential yet expensive activity in software development, therefore much research effort has been put to automate it as much as possible. Search-based software testing consists of using meta-heuristic optimizing search technique, such as genetic algorithms, to address problems in the software testing and verification and validation domain, such as regression testing optimization and automatic test data generation.<br/> The main goal of an optimization process is to guide the search toward good solutions from a potentially infinite search space, within a practical time limit.
+                            </p>
+                        </section>
+                    </div>
+                    <div class="4u">
+                        <section class="box">
+                            <h3>Energy Optimization of Mobile Apps</h3>
+                            <p style="text-align: justify">
+                                Energy efficiency is a vital characteristic of any mobile app, and indeed is becoming an important factor for user satisfaction. However, optimizing the energy consumption of a mobile app is non-trivial due to the highly volatile nature of mobile execution environments and the lack of knowledge of software developers.<br/> The goal of this topic is on the one hand to build new tools able to measure the energy profile of mobile apps, and on the other hand to propose new methods and tools able to assist software developers.
+                            </p>
+                        </section>
                     </div>
                 </div>
-            </article>
-        </div>
+                <div class="row">
+                    <div class="4u">
+                        <section class="box">
+                            <h3>Mining Software Repositories</h3>
+                            <p style="text-align: justify">
+                                Software repositories such as source code control systems, communications stored between project staff and monitoring systems of the defects are used to improve the management of the progress of software projects.<br/> The purpose of this branch of research is to find out how to obtain information in order to help understand the development and evolution software processes, support forecasts on software development, and plan future developments.
+                            </p>
+                        </section>
+                    </div>
+                    <div class="4u">
+                        <section class="box">
+                            <h3>Empirical Software Engineering</h3>
+                            <p style="text-align: justify">
+                                Empirical software engineering is a subdomain of software related to experiments on systems software (software products, processes and resources).<br/> This branch includes the design of experiments on software, the collection of the results, and the consequent development of laws and theories.<br/> Proponents of empirical software engineering argue that, given the nature of the software, it is possible to broaden the knowledge about it through new experiments.
+                            </p>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </article>
+    </div>
 
-    </body>
+</body>
+
 </html>
