Fix teaching assistance table width.

--- a/teaching.html
+++ b/teaching.html
@@ -74,57 +74,59 @@
     <div class="container-fluid p-0">
 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
-            
+
             <div class="my-auto">
                 <h2 class="mb-2">Teaching Assistance</h2>
-                <table class="table table-hover table-responsive">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>Course</th>
-                            <th>Degree</th>
-                            <th>Professor</th>
-                            <th>Period</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Programming I</td>
-                            <td>BSc</td>
-                            <td>Prof. Riccardo Distasi<br/> </td>
-                            <td>2016/17 (Fall Semester)</td>
-                        </tr>
-                        <tr>
-                            <td>Programming I</td>
-                            <td>BSc</td>
-                            <td>Prof. Enrico Fischetti<br/> </td>
-                            <td>2015/16 (Fall Semester) <br/> 2015/16 (Spring Semester)</td>
-                        </tr>
-                        <tr>
-                            <td>Software Engineering, Management and Evolution</td>
-                            <td>MSc</td>
-                            <td>Prof. Andrea De Lucia</td>
-                            <td>2015/16 (Spring Semester) <br/> 2016/17 (Spring Semester)</td>
-                        </tr>
-                        <tr>
-                            <td>Software Engineering: Maintenance and Testing</td>
-                            <td>MSc</td>
-                            <td>Prof. Andrea De Lucia</td>
-                            <td>2015/16 (Fall Semester)</td>
-                        </tr>
-                        <tr>
-                            <td>Software Engineering</td>
-                            <td>BSc</td>
-                            <td>Prof. Andrea De Lucia</td>
-                            <td>2015/16 (Fall Semester) <br/> 2016/17 (Fall Semester)</td>
-                        </tr>
-                        <tr>
-                            <td>Web Development</td>
-                            <td>BSc</td>
-                            <td>-</td>
-                            <td>2016/17 (Fall Semester)</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="table-responsive">
+                    <table class="table table-hover table-sm">
+                        <thead class="thead-light">
+                            <tr>
+                                <th>Course</th>
+                                <th>Degree</th>
+                                <th>Professor</th>
+                                <th>Period</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Programming I</td>
+                                <td>BSc</td>
+                                <td>Prof. Riccardo Distasi<br/> </td>
+                                <td>2016/17 (Fall Semester)</td>
+                            </tr>
+                            <tr>
+                                <td>Programming I</td>
+                                <td>BSc</td>
+                                <td>Prof. Enrico Fischetti<br/> </td>
+                                <td>2015/16 (Fall Semester) <br/> 2015/16 (Spring Semester)</td>
+                            </tr>
+                            <tr>
+                                <td>Software Engineering, Management and Evolution</td>
+                                <td>MSc</td>
+                                <td>Prof. Andrea De Lucia</td>
+                                <td>2015/16 (Spring Semester) <br/> 2016/17 (Spring Semester)</td>
+                            </tr>
+                            <tr>
+                                <td>Software Engineering: Maintenance and Testing</td>
+                                <td>MSc</td>
+                                <td>Prof. Andrea De Lucia</td>
+                                <td>2015/16 (Fall Semester)</td>
+                            </tr>
+                            <tr>
+                                <td>Software Engineering</td>
+                                <td>BSc</td>
+                                <td>Prof. Andrea De Lucia</td>
+                                <td>2015/16 (Fall Semester) <br/> 2016/17 (Fall Semester)</td>
+                            </tr>
+                            <tr>
+                                <td>Web Development</td>
+                                <td>BSc</td>
+                                <td>-</td>
+                                <td>2016/17 (Fall Semester)</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
 
         </section>
