--- a/services.html
+++ b/services.html
@@ -24,6 +24,20 @@
     <link href="css/resume.css" rel="stylesheet">
     <link href="css/academicons.css" rel="stylesheet" />
     <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-57094101-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-57094101-2');
+
+    </script>
 
 </head>
 
