Remove awards page.

--- a/publications.html
+++ b/publications.html
@@ -67,9 +67,6 @@
                     <a class="nav-link js-scroll-trigger" href="research.html">Research Interests</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="publications.html">Publications</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
@@ -79,7 +76,7 @@
                     <a class="nav-link js-scroll-trigger" href="teaching.html">Teaching</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="awards.html">Awards</a>
+                    <a class="nav-link js-scroll-trigger" href="publications.html">Publications and Awards</a>
                 </li>
             </ul>
         </div>
@@ -90,7 +87,17 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
             <div class="my-auto">
                 <h2 class="mb-2">Publications</h2>
-                You can find the complete list of my publications <a target="blank" href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ">here</a>.
+                <p class="mb-5"> You can find the complete list of my publications <a target="blank" href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ">here</a>.</p>
+
+                <h2 class="mb-2">Awards</h2>
+                <ul class="fa-ul mb-0">
+                    <li>
+                        <i class="fa-li fa fa-trophy text-warning"></i> ACM SIGSOFT travel support - 37th International Conference on Software Engineering, Florence, Italy, 2015
+                    </li>
+                    <li>
+                        <i class="fa-li fa fa-trophy text-warning"></i> NSF travel support - Symposium on Search-Based Software Engineering, Raleigh, NC, United States, 2016
+                    </li>
+                </ul>
             </div>
             
         </section>
