--- a/services.html
+++ b/services.html
@@ -67,9 +67,6 @@
                     <a class="nav-link js-scroll-trigger" href="research.html">Research Interests</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="publications.html">Publications</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
@@ -79,7 +76,7 @@
                     <a class="nav-link js-scroll-trigger" href="teaching.html">Teaching</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="awards.html">Awards</a>
+                    <a class="nav-link js-scroll-trigger" href="publications.html">Publications and Awards</a>
                 </li>
             </ul>
         </div>
@@ -106,8 +103,8 @@
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
                             International Conference on Software Maintainance and Evolution (ICSME) - Tool Demo Track: 2018<br/>
-                            Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2018<br/>
-                            International Conference on Advances in System Testing and Validation Lifecycle (VALID): 2017, 2018
+                            International Conference on Advances in System Testing and Validation Lifecycle (VALID): 2017, 2018<br/>
+                            Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2018
                         </p>
                     </div>
                 </div>
