--- a/teaching.html
+++ b/teaching.html
@@ -67,9 +67,6 @@
                     <a class="nav-link js-scroll-trigger" href="research.html">Research Interests</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="publications.html">Publications</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
@@ -79,7 +76,7 @@
                     <a class="nav-link js-scroll-trigger" href="teaching.html">Teaching</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="awards.html">Awards</a>
+                    <a class="nav-link js-scroll-trigger" href="publications.html">Publications and Awards</a>
                 </li>
             </ul>
         </div>
