Add professional services

--- a/services.html
+++ b/services.html
@@ -103,7 +103,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
-                            International Conference on Software Maintainance and Evolution (ICSME) - Tool Demo Track: 2018<br/>
+                            IEEE International Conference on Software Maintainance and Evolution (ICSME) - Tool Demo Track: 2018<br/>
+                            IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft) – Student Research Competition: 2018<br/>
                             International Conference on Advances in System Testing and Validation Lifecycle (VALID): 2017, 2018<br/>
                             Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2018
                         </p>
