--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
                 <ul class="list-inline list-social-icons mb-0 text-center">
                     <li class="list-inline-item">
-                        <a href="mailto:ddinucci@vub.ac.be">
+                        <a href="mailto:dario.di.nucci@vub.be">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
