--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
             <div class="my-auto">
                 <h1 class="mb-0">Di Nucci Dario</h1>
                 <p class="mb-5 text-justify small">I obtained my PhD in Management and Information Technology at the University of Salerno, advised by Prof.
-                    Andrea De Lucia working on "Methods and Tools for Focusing and Prioritizing the Testing Effort" in 2018.
-                    <br/> Currently I am a research fellow in the Software Languages Lab at the Vrije Universiteit Brussel.
+                    Andrea De Lucia working on "Methods and Tools for Focusing and Prioritizing the Testing Effort" in 2018. Currently I am a research fellow in the Software Languages Lab at the Vrije Universiteit Brussel.
                     <br/> My research interests are within the Software Engineering topic and include software maintenance and
                     evolution, software testing, search based software engineering, green mining, mining software repositories,
                     and empirical software engineering.
