--- a/services.html
+++ b/services.html
@@ -135,7 +135,7 @@
                         <p class="card-text text-justify small">
                             IEEE International Conference on Program Comprehension (ICPC): 2016, 2018<br/>
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER): 2017, 2018<br/>
-                            IEEE International Conference on Software Maintenance and Evolution (ICSME) - ERA Track: 2016<br/>
+                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2016 (ERA Track), 2018<br/>
                             International Conference on Business Information Systems (BIS): 2015, 2016, 2017<br/>
                             International Conference on Distributed Multimedia Systems (DMS): 2015, 2016<br/>
                             International Conference on Enterprise Information Systems (ICEIS): 2015, 2016, 2017
