Add Computational Intelligence as reviewer

--- a/services.html
+++ b/services.html
@@ -119,6 +119,7 @@
                         <p class="card-text text-justify small">
                             Advances in Software Engineering - Elsevier<br/>
                             Arabian Journal for Science and Engineering - Springer<br/>
+                            Computational Intelligence - Wiley<br/>
                             Empirical Software Engineering - Springer<br/>
                             IEEE Access - IEEE<br/>
                             IET Software - Institution of Engineering and Technology<br/>
