Update teaching, projects, and services

--- a/projects.html
+++ b/projects.html
@@ -122,6 +122,8 @@
                         <p class="card-text"><a href="http://www.sesa.unisa.it/landfill/" target="_blank">Web site</a></p>
                     </div>
                 </div>
+
+                <h2 class="mb-2">Past Projects</h2>
                 
                 <div class="card card-horizontal my-5">
                     <div class="card-body">
