--- a/teaching.html
+++ b/teaching.html
@@ -89,6 +89,32 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
 
+        <div class="my-auto">
+                <h2 class="mb-2">Lecturer</h2>
+                <div class="table-responsive">
+                    <table class="table table-hover table-sm">
+                        <thead class="thead-light">
+                            <tr>
+                                <th>Course</th>
+                                <th>Degree</th>
+                                <th>University</th>
+                                <th>Period</th>
+                                <th>Notes</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Capita Selecta of Software Engineering</td>
+                                <td>MSc in Computer Science</td>
+                                <td>Vrije Univeriteit Brussel</td>
+                                <td>2018/19 (yearly course)<br/> </td>
+                                <td><i>taught with <a href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof. Coen De Roover</a></i></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
             <div class="my-auto">
                 <h2 class="mb-2">Teaching Assistance</h2>
                 <div class="table-responsive">
@@ -97,6 +123,7 @@
                             <tr>
                                 <th>Course</th>
                                 <th>Degree</th>
+                                <th>University</th>
                                 <th>Professor</th>
                                 <th>Period</th>
                             </tr>
@@ -105,36 +132,42 @@
                             <tr>
                                 <td>Programming I</td>
                                 <td>BSc</td>
-                                <td>Prof. Riccardo Distasi<br/> </td>
+                                <td>Università degli Studi di Salerno</td>
+                                <td><a href="https://docenti.unisa.it/004532/en/home" target="blank">Prof. Riccardo Distasi</a></td>
                                 <td>2016/17 (Fall Semester)</td>
                             </tr>
                             <tr>
                                 <td>Programming I</td>
-                                <td>BSc</td>
-                                <td>Prof. Enrico Fischetti<br/> </td>
+                                <td>BSc in Computer Science</td>
+                                <td>Università degli Studi di Salerno</td>
+                                <td><a href="https://docenti.unisa.it/000263/en/curriculum" target="blank">Prof. Enrico Fischetti</a></td>
                                 <td>2015/16 (Fall Semester) <br/> 2015/16 (Spring Semester)</td>
                             </tr>
                             <tr>
                                 <td>Software Engineering, Management and Evolution</td>
-                                <td>MSc</td>
-                                <td>Prof. Andrea De Lucia</td>
+                                <td>MSc in Computer Science</td>
+                                <td>Università degli Studi di Salerno</td>
+                                <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
                                 <td>2015/16 (Spring Semester) <br/> 2016/17 (Spring Semester)</td>
                             </tr>
                             <tr>
                                 <td>Software Engineering: Maintenance and Testing</td>
-                                <td>MSc</td>
-                                <td>Prof. Andrea De Lucia</td>
+                                <td>MSc in Computer Science</td>
+                                <td>Università degli Studi di Salerno</td>
+                                <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
                                 <td>2015/16 (Fall Semester)</td>
                             </tr>
                             <tr>
                                 <td>Software Engineering</td>
-                                <td>BSc</td>
-                                <td>Prof. Andrea De Lucia</td>
+                                <td>BSc in Computer Science</td>
+                                <td>Università degli Studi di Salerno</td>
+                                <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
                                 <td>2015/16 (Fall Semester) <br/> 2016/17 (Fall Semester)</td>
                             </tr>
                             <tr>
                                 <td>Web Development</td>
-                                <td>BSc</td>
+                                <td>BSc in Computer Science</td>
+                                <td>Università degli Studi di Salerno</td>
                                 <td>-</td>
                                 <td>2016/17 (Fall Semester)</td>
                             </tr>
