--- a/index.html
+++ b/index.html
@@ -91,11 +91,7 @@
         <section class="resume-section p-3 p-lg-5 d-flex d-column">
             <div class="my-auto">
                 <h1 class="mb-0">Di Nucci Dario</h1>
-                <p class="mb-5 text-justify small">I obtained my PhD in Management and Information Technology at the University of Salerno, advised by Prof.
-                    Andrea De Lucia working on "Methods and Tools for Focusing and Prioritizing the Testing Effort" in 2018. Currently I am a research fellow in the Software Languages Lab at the Vrije Universiteit Brussel.
-                    <br/> My research interests are within the Software Engineering topic and include software maintenance and
-                    evolution, software testing, search based software engineering, green mining, mining software repositories,
-                    and empirical software engineering.
+                <p class="mb-5 text-justify">I am a research fellow at the Software Languages Lab of the Vrije Universiteit Brussel in Belgium. I received the PhD in Management and Information Technology from the University of Salerno in 2018 advised by <a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a> with a thesis entitled <i>Methods and Tools for Focusing and Prioritizing the Testing Effort</i>. My research interests are within the Software Engineering topic and include software maintenance and evolution, software testing, search based software engineering, green mining, mining software repositories, and empirical software engineering.
                     <br/> You can find my full Curriculum Vitae
                     <a target="blank" href="Short Resume.pdf">here</a>.</p>
 
