--- a/publications.html
+++ b/publications.html
@@ -46,21 +46,15 @@
 
 <body id="page-top">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top text-left" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Dario Di Nucci</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
         </span>
         </a>
-        <span class="d-none d-lg-block">
-            <a href="https://orcid.org/0000-0002-3861-1902" target="orcid.widget" rel="noopener noreferrer">
-                <img class="img-fluid img-orcid mx-auto mb-2 w-50" src="img/my_orcid_qrcode.png" alt=""/>
-            </a>
-        </span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -83,24 +77,38 @@
                 </li>
             </ul>
         </div>
+        <span class="d-none d-lg-block text-center">
+            <a href="https://orcid.org/0000-0002-3861-1902" target="orcid.widget" rel="noopener noreferrer">
+                <img class="img-fluid img-orcid mb-2 w-50" src="img/my_orcid_qrcode.png" alt=""/>
+            </a>
+        </span>
     </nav>
 
     <div class="container-fluid p-0">
 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
-            <div class="my-auto">
-                <h2 class="mb-2">Publications</h2>
-                <p class="mb-5"> You can find the complete list of my publications <a target="blank" href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ">here</a>.</p>
 
-                <h2 class="mb-2">Awards</h2>
-                <ul class="fa-ul mb-0">
-                    <li>
-                        <i class="fa-li fa fa-trophy text-warning"></i> ACM SIGSOFT travel support - 37th International Conference on Software Engineering, Florence, Italy, 2015
-                    </li>
-                    <li>
-                        <i class="fa-li fa fa-trophy text-warning"></i> NSF travel support - Symposium on Search-Based Software Engineering, Raleigh, NC, United States, 2016
-                    </li>
-                </ul>
+            <h2 class="mb-5">Publications and Awards</h2>
+
+            <div class="card mb-2">
+                <div class="card-body">
+                    <h5 class="card-title">Publications</h5>
+                    <p class="card-text">You can find the complete list of my publications <a target="blank" href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ">here</a>.</p>
+                </div>
+            </div>
+
+            <div class="card mb-2">
+                <div class="card-body">
+                    <h5 class="card-title">Awards</h5>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <i class="fa-li fa fa-trophy text-warning"></i> ACM SIGSOFT travel support - 37th International Conference on Software Engineering, Florence, Italy, 2015
+                        </li>
+                        <li>
+                            <i class="fa-li fa fa-trophy text-warning"></i> NSF travel support - Symposium on Search-Based Software Engineering, Raleigh, NC, United States, 2016
+                        </li>
+                    </ul>
+                </div>
             </div>
             
         </section>
