--- a/teaching.html
+++ b/teaching.html
@@ -46,21 +46,15 @@
 
 <body id="page-top">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top text-left" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Dario Di Nucci</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
         </span>
         </a>
-        <span class="d-none d-lg-block">
-            <a href="https://orcid.org/0000-0002-3861-1902" target="orcid.widget" rel="noopener noreferrer">
-                <img class="img-fluid img-orcid mx-auto mb-2 w-50" src="img/my_orcid_qrcode.png" alt=""/>
-            </a>
-        </span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -83,98 +77,108 @@
                 </li>
             </ul>
         </div>
+        <span class="d-none d-lg-block text-center">
+            <a href="https://orcid.org/0000-0002-3861-1902" target="orcid.widget" rel="noopener noreferrer">
+                <img class="img-fluid img-orcid mb-2 w-50" src="img/my_orcid_qrcode.png" alt=""/>
+            </a>
+        </span>
     </nav>
 
     <div class="container-fluid p-0">
-
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
 
-        <div class="my-auto">
-                <h2 class="mb-2">Lecturer</h2>
-                <div class="table-responsive">
-                    <table class="table table-hover table-sm">
-                        <thead class="thead-light">
-                            <tr>
-                                <th>Course</th>
-                                <th>Degree</th>
-                                <th>University</th>
-                                <th>Period</th>
-                                <th>Notes</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Capita Selecta of Software Engineering</td>
-                                <td>MSc in Computer Science</td>
-                                <td>Vrije Univeriteit Brussel</td>
-                                <td>2018/19 (yearly course)<br/> </td>
-                                <td><i>taught with <a href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof. Coen De Roover</a></i></td>
-                            </tr>
-                        </tbody>
-                    </table>
+            <h2 class="mb-5">Teaching</h2>
+            
+            <div class="card card-horizontal mb-2">
+                <div class="card-body">
+                    <h4 class="card-title">Lecturer</h4>
+                    <div class="table-responsive">
+                        <table class="table table-hover table-sm">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th>Course</th>
+                                    <th>Degree</th>
+                                    <th>University</th>
+                                    <th>Period</th>
+                                    <th>Notes</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Capita Selecta of Software Engineering</td>
+                                    <td>MSc in Computer Science</td>
+                                    <td>Vrije Univeriteit Brussel</td>
+                                    <td>2018/19 (yearly course)<br/> </td>
+                                    <td><i>taught with <a href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof. Coen De Roover</a></i></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
 
-            <div class="my-auto">
-                <h2 class="mb-2">Teaching Assistance</h2>
-                <div class="table-responsive">
-                    <table class="table table-hover table-sm">
-                        <thead class="thead-light">
-                            <tr>
-                                <th>Course</th>
-                                <th>Degree</th>
-                                <th>University</th>
-                                <th>Professor</th>
-                                <th>Period</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Programming I</td>
-                                <td>BSc</td>
-                                <td>Università degli Studi di Salerno</td>
-                                <td><a href="https://docenti.unisa.it/004532/en/home" target="blank">Prof. Riccardo Distasi</a></td>
-                                <td>2016/17 (Fall Semester)</td>
-                            </tr>
-                            <tr>
-                                <td>Programming I</td>
-                                <td>BSc in Computer Science</td>
-                                <td>Università degli Studi di Salerno</td>
-                                <td><a href="https://docenti.unisa.it/000263/en/curriculum" target="blank">Prof. Enrico Fischetti</a></td>
-                                <td>2015/16 (Fall Semester) <br/> 2015/16 (Spring Semester)</td>
-                            </tr>
-                            <tr>
-                                <td>Software Engineering, Management and Evolution</td>
-                                <td>MSc in Computer Science</td>
-                                <td>Università degli Studi di Salerno</td>
-                                <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
-                                <td>2015/16 (Spring Semester) <br/> 2016/17 (Spring Semester)</td>
-                            </tr>
-                            <tr>
-                                <td>Software Engineering: Maintenance and Testing</td>
-                                <td>MSc in Computer Science</td>
-                                <td>Università degli Studi di Salerno</td>
-                                <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
-                                <td>2015/16 (Fall Semester)</td>
-                            </tr>
-                            <tr>
-                                <td>Software Engineering</td>
-                                <td>BSc in Computer Science</td>
-                                <td>Università degli Studi di Salerno</td>
-                                <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
-                                <td>2015/16 (Fall Semester) <br/> 2016/17 (Fall Semester)</td>
-                            </tr>
-                            <tr>
-                                <td>Web Development</td>
-                                <td>BSc in Computer Science</td>
-                                <td>Università degli Studi di Salerno</td>
-                                <td>-</td>
-                                <td>2016/17 (Fall Semester)</td>
-                            </tr>
-                        </tbody>
-                    </table>
+            <div class="card card-horizontal mb-2">
+                    <div class="card-body">
+                        <h4 class="card-title">Teaching Assistant</h4>
+                        <div class="table-responsive">
+                            <table class="table table-hover table-sm">
+                                    <thead class="thead-light">
+                                        <tr>
+                                            <th>Course</th>
+                                            <th>Degree</th>
+                                            <th>University</th>
+                                            <th>Professor</th>
+                                            <th>Period</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>Programming I</td>
+                                            <td>BSc</td>
+                                            <td>Università degli Studi di Salerno</td>
+                                            <td><a href="https://docenti.unisa.it/004532/en/home" target="blank">Prof. Riccardo Distasi</a></td>
+                                            <td>2016/17 (Fall Semester)</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Programming I</td>
+                                            <td>BSc in Computer Science</td>
+                                            <td>Università degli Studi di Salerno</td>
+                                            <td><a href="https://docenti.unisa.it/000263/en/curriculum" target="blank">Prof. Enrico Fischetti</a></td>
+                                            <td>2015/16 (Fall Semester) <br/> 2015/16 (Spring Semester)</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Software Engineering, Management and Evolution</td>
+                                            <td>MSc in Computer Science</td>
+                                            <td>Università degli Studi di Salerno</td>
+                                            <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
+                                            <td>2015/16 (Spring Semester) <br/> 2016/17 (Spring Semester)</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Software Engineering: Maintenance and Testing</td>
+                                            <td>MSc in Computer Science</td>
+                                            <td>Università degli Studi di Salerno</td>
+                                            <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
+                                            <td>2015/16 (Fall Semester)</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Software Engineering</td>
+                                            <td>BSc in Computer Science</td>
+                                            <td>Università degli Studi di Salerno</td>
+                                            <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
+                                            <td>2015/16 (Fall Semester) <br/> 2016/17 (Fall Semester)</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Web Development</td>
+                                            <td>BSc in Computer Science</td>
+                                            <td>Università degli Studi di Salerno</td>
+                                            <td>-</td>
+                                            <td>2016/17 (Fall Semester)</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
         </section>
 
