Add JSS as reviewer

--- a/services.html
+++ b/services.html
@@ -127,6 +127,7 @@
                             Information Processing Letters - Elsevier<br/>
                             Journal of King Saud University: Computer and Information Sciences - Elsevier<br/>
                             Journal of Software: Evolution and Process - Wiley<br/>
+                            Journal of Systems and Software - Elsevier<br/>
                             Software Quality Journal - Springer
                         </p>
                     </div>
